fix (boot.js) * minification errors * refactor first app start to be more readable and less error-prone * remove MainCtrl start() method (integrated in boot.js)

--- a/front_end/assets/css/main.css
+++ b/front_end/assets/css/main.css
@@ -158,8 +158,7 @@
 .text-danger {
   color: #26a69a;
   font-weight: 400;
-  line-height: 1.3rem !important;
-}
+  line-height: 1.3rem !important; }
 
 .center-vertical {
   display: flex;
@@ -10623,6 +10622,7 @@ select {
   color: #fff;
   font-family: 'Roboto';
   letter-spacing: 0.02em;
+  line-height: 1.3rem;
   -webkit-user-select: none !important; }
 
 html {
@@ -10711,6 +10711,7 @@ font {
 footer#disclaimer {
   font-size: 0.7rem;
   text-align: justify;
+  line-height: 0.8rem;
   letter-spacing: 0.4px;
   font-weight: 100; }
 
